beckup/default_allow_egress.yaml
# --- 
# allow egress from default

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-all-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: pod-2
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: websrv

#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: default-allow-all-egress
#  namespace: default
#spec:
#  podSelector: {}
#  egress:
#  - {}
#  policyTypes:
#  - Egress
