beckup/default_deny.yaml
# ---
# default deny all netpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: defaul-all-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
