beckup/dns_web.yaml
# ---
# DNS access rule ns=web
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-web
  namespace: web
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
