beckup/pod-1_pod-2_egress.yaml
# ---
# egress rull pod-1 ---> pod-2 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pod-1
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: pod-1
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: pod-2
