beckup/pod-2_pod-4_egress.yaml
# ---
# allo traffic from pod-2 to pod-4
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-2-to-pod-4-egr
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: pod-2
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          wsrv: websrv
