beckup/pod-4-from-pod-3-ing.yaml
# ---
# allow ingres to pod-4 from pod-3
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-4-from-pod-3-ing
  namespace: websrv
spec:
  podSelector:
    matchLabels:
      run: pod-4
#  policyTypes:
#  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tsrv: testsrv
