beckup/pod-4-pod-2-ingress.yaml
# ---
# allo ingress from pod-2 to pod-4
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-4-from-pod-2-ing
  namespace: websrv
spec:
  podSelector:
    matchLabels:
      run: pod-4
#  policyTypes:
#  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsdef: default
