beckup/pod-4_ingress.yaml
# ---
# ingress rull pod-4 ---> ns
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-4-from-default
  namespace: websrv
spec:
  podSelector:
    matchLabels:
      run: pod-4
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: default  
        podSelector:
          matchLabels:
            run: pod-2
