beckup/test_deny.yaml
# ---
# web deny all netpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testsrv-all-deny
  namespace: testsrv
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
