beckup/web_allo_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: websrv-allow-all-egress
  namespace: websrv
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
